Fill basic infos in html file

--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>simon-music-game</title>
+	<title>Simon music game</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="Virzen <wiktor.czajkowski@gmail.com>">
+	<meta name="author" content="Simon Music Game">
 	<meta name="description" content="Simon game with music for FreeCodeCamp certificate.">
 </head>
 <body>
 	<header class="primary-header">
-		<h1>simon-music-game</h1>
+		Simon Music Game
 	</header>
 
 	<div id="app">
-		{{ hello }}
+
 	</div>
 
 	<footer class="primary-footer">
-		Virzen <wiktor.czajkowski@gmail.com> &copy; 2016. All rights reserved.
+		Wiktor Czajkowski&copy; 2016. All rights reserved.
 	</footer>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.18/vue.min.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.18/vue.min.js"></script> -->
 	<script src="js/main.js"></script>
 </body>
 </html>
