Add single space in footer and change Vue version to 1.0.20

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header class="primary-header">
-		Simon Music Game
+		<h1>Simon Music Game</h1>
 	</header>
 
 	<div id="app">
@@ -17,14 +17,14 @@
 	</div>
 
 	<footer class="primary-footer">
-		Wiktor Czajkowski&copy; 2016. All rights reserved.
+		Wiktor Czajkowski &copy; 2016. All rights reserved.
 	</footer>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- JS -->
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.18/vue.min.js"></script> -->
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.20/vue.min.js"></script> -->
 	<script src="js/main.js"></script>
 </body>
 </html>
