--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
 
 	</div>
 
-	<footer class="primary-footer">
+	<!-- <footer class="primary-footer">
 		Wiktor Czajkowski &copy; 2016. All rights reserved.
-	</footer>
+	</footer> -->
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- JS -->
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.20/vue.min.js"></script> -->
+	<script src="js/teoria.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
