--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- JS -->
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.20/vue.min.js"></script> -->
+	<script src="js/vue.js"></script>
+	<!-- <script src="js/vue.min.js"></script> -->
 	<script src="js/teoria.js"></script>
 	<script src="js/main.js"></script>
 </body>
