Add required browsers in the footer

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 		</keyboard>
 	</div>
 
-	<!-- <footer class="primary-footer">
+	<footer class="primary-footer">
+		<p>
+			Requires Firefox 45+, Chrome 49+
+		</p>
+
 		Wiktor Czajkowski &copy; 2016. All rights reserved.
-	</footer> -->
+	</footer>
 
 
 	<!-- Templates -->
