Change `key` property on `sound` to `keyCode` and add prop `key`

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			@mousedown="sound.start"
 			@mouseup="sound.stop"
 		>
-			{{ sound.note | uppercase }} ({{ sound.key }})
+			{{ sound.key }}
 		</button>
 	</template>
 
