--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 	<div id="app">
 		<section>
-			<h2>Controls</h2>
-			<button type="button" @click="toggleSettings">Toggle settings</button>
+			<button type="button" @click="toggleSettings">Settings</button>
 		</section>
 		<section v-show="settingsOn">
 			<h2>Settings</h2>
@@ -43,6 +42,8 @@
 		<button type="button"
 			@mousedown="sound.start"
 			@mouseup="sound.stop"
+			@touchstart="sound.start"
+			@touchend="sound.stop"
 		>
 			{{ sound.key }}
 		</button>
