--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
 </head>
 <body>
 	<header class="primary-header">
-		<h1>Simon Music Game</h1>
+		<h1>Scale keyboard</h1>
 	</header>
 
 	<div id="app">
 		<section>
 			<h2>Controls</h2>
-			<button type="button" @click="startGame">Start game</button>
-			<button type="button" @click="restartGame">Restart game</button>
-			Current number of steps: {{ currentSteps }}
-			<br>
 			<button type="button" @click="toggleSettings">Settings</button>
 		</section>
 		<section v-show="settingsOn">
