Change meta title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Simon music game</title>
+	<title>Scale keyboard</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Simon Music Game">
 	<meta name="description" content="Simon game with music for FreeCodeCamp certificate.">
